--- a/Ribolov/Web.config
+++ b/Ribolov/Web.config
@@ -7,6 +7,10 @@
   <connectionStrings>
     <add name="RibolovConnectionString" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Ribolov;Integrated Security=True"
       providerName="System.Data.SqlClient" />
+    <add name="RibolovConnectionString2" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Ribolov;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
+    <add name="RibolovConnectionString3" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Ribolov;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
